[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-graph"
version = "1.0.0"
description = "A schema-validated knowledge graph implementation"
readme = "README.md"
authors = [
    {name = "Frederik Steensgaard Gade", email = "fzsg@novonordisk.com"},
]
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = [
    "knowledge graph",
    "graph database",
    "networkx",
    "machine learning",
    "data science",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "networkx>=2.0",
]

[project.optional-dependencies]
torch = [
    "torch>=1.9.0",
    "torch-geometric>=2.0.0",
]
pykeen = [
    "pykeen>=1.8.0",
    "torch>=1.9.0",
]
all = [
    "pykeen>=1.8.0",
    "torch>=1.9.0",
    "torch-geometric>=2.0.0",
]
